--- a/tp2/docker-compose.yml
+++ b/tp2/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3.9"
 services:
   web:
-    build: .
+    build: ./app
     depends_on:
       - redis
     ports:
       - "5000:5000"
+    volumes:
+      - ./app:/app
   redis:
-    image: "redis:alpine"
+    image: "redis"
